--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-certifi==2019.9.11
-chardet==3.0.4
-future==0.18.1
-idna==2.8
-line-bot-sdk==1.14.0
-requests==2.22.0
-somepackage==1.2.3
-urllib3==1.25.6
+line-bot-sdk
+gunicorn
+flask
